# theclown

./: .gitignore  LICENSE  PROMPT.md  README.md  pyproject.toml  theclown.py
.github/workflows/: test.yml
tests/: adversarial_div_zero.rs  adversarial_mod_zero.rs  adversarial_multi_arg.rs  adversarial_uninitialized.rs  arith_parens.rs  arith_precedence.rs  arith_subtract.rs  array_basic.rs  array_move.rs  array_mut.rs  array_oob.rs  attribute_noop.rs  block_expr.rs  bouncer_trait.rs  cast_basic.rs  cast_println.rs  cast_unsupported.rs  compound_assign.rs  const_basic.rs  enum_basic.rs  enum_color.rs  enum_tuple_variant.rs  error_scope.rs  error_wrong_arity.rs  fft_recursive.rs  fib_recursive.rs  float_basic.rs  float_division.rs  float_negation.rs  fn_multiple.rs  fn_return.rs  for_sum.rs  if_basic.rs  if_else_if.rs  if_false_side_effect.rs  impl_standalone.rs  lc_add_digits.rs  lc_climbing_stairs.rs  lc_collatz.rs  lc_count_bits.rs  (+56 more)
