[project]
name = "theclown"
version = "0.3.1"
description = "An unserious Rust interpreter written in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-rust>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
